--- a/app/assets/stylesheets/topics.scss
+++ b/app/assets/stylesheets/topics.scss
@@ -246,7 +246,14 @@
 
 form {
   #cover-preview { 
+    cursor: pointer;
+    min-height: 150px;
+    border: 2px solid rgba(0, 0, 0, 0.3);
+    background: white;
+    padding: 20px 20px;
+
     margin-bottom:10px;
+    box-sizing: border-box;
   }
 
   #preview { min-height: 500px; overflow-y: scroll; }
